# explorerbot_v2_control

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: i2c_motor_driver.yaml  joystick.yaml  twist_mux.yaml
explorer_bot_controller/: explorer_bot_controller.py  i2c_motor_driver.py
launch/: joystick_controller.launch.py
src/: motor_controller.cpp
