<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>explorer_bot_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="explorer@todo.todo">explorer</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>                      <!-- ROS2 Python client library -->
  <depend>smbus2</depend>                    <!-- I2C communication -->
  <depend>hardware_interface</depend>       <!-- Hardware interface -->
  <depend>controller_manager</depend>      <!-- Controller manager -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
